experimental/parser/testdata/parser/import/symbol.proto.stderr.txt
error: unexpected qualified name in import
  --> testdata/parser/import/symbol.proto:5:8
   |
 5 | import my.Proto;
   |        ^^^^^^^^ expected string literal
   |
   = help: Protobuf does not support importing symbols by name, instead, try
           importing a file, e.g. `import "google/protobuf/descriptor.proto";`

error: unexpected qualified name in import
  --> testdata/parser/import/symbol.proto:6:13
   |
 6 | import weak my.Proto;
   |             ^^^^^^^^ expected string literal
   |
   = help: Protobuf does not support importing symbols by name, instead, try
           importing a file, e.g. `import "google/protobuf/descriptor.proto";`

error: unexpected qualified name in import
  --> testdata/parser/import/symbol.proto:7:15
   |
 7 | import public my.Proto;
   |               ^^^^^^^^ expected string literal
   |
   = help: Protobuf does not support importing symbols by name, instead, try
           importing a file, e.g. `import "google/protobuf/descriptor.proto";`

encountered 3 errors
